--- a/selfstudy-rest/src/main/webapp/edit_project.html
+++ b/selfstudy-rest/src/main/webapp/edit_project.html
@@ -530,11 +530,11 @@
     <table style="margin-top: 12px">
         <tr>
             <td><b>Start</b></td>
-            <td><input type="date" id="start"></td>
+            <td><input type="text" maxlength="10" size="10" id="start"></td>
         </tr>
         <tr>
             <td><b>Deadline</b></td>
-            <td><input type="date" id="deadline"></td>
+            <td><input type="text" maxlength="10" size="10" id="deadline"></td>
         </tr>
         <tr>
             <td><b>Estimate</b></td>
