--- a/selfstudy-rest/src/main/webapp/view_project.html
+++ b/selfstudy-rest/src/main/webapp/view_project.html
@@ -233,11 +233,11 @@
     <table style="margin-top: 12px">
         <tr>
             <td><b>Start</b></td>
-            <td><input type="date" readonly id="start"></td>
+            <td><input type="text" maxlength="10" size="10" readonly id="start"></td>
         </tr>
         <tr>
             <td><b>Deadline</b></td>
-            <td><input type="date" readonly id="deadline"></td>
+            <td><input type="text" maxlength="10" size="10" readonly id="deadline"></td>
         </tr>
         <tr>
             <td><b>Estimate</b></td>
