--- a/selfstudy-rest/src/main/webapp/edit_project.html
+++ b/selfstudy-rest/src/main/webapp/edit_project.html
@@ -414,6 +414,7 @@
                 hyperlinkObject.url = document.getElementById("url").value;
                 projectObject.hyperlinks.push(hyperlinkObject);
                 buildHyperlinks();
+                document.getElementById("url").value = "";
             }
 
             function removeHyperlink(evt) {
@@ -444,7 +445,7 @@
 
 
 			function save(evt) {
-			    //alert("Saving ...");
+			    alert("Saving ...");
 			    // TODO: Decorate projectObject with fields, send to rest service and on success show project list
                 // fetch data
                 var description = document.getElementById("description").value;
@@ -488,7 +489,7 @@
                 document.getElementById("json").innerHTML= JSON.stringify(projectObject, null, 2);
                 // Send to server and view result
    				var url = "rest/projects/" + projectObject.id;
-   				//alert("PUT to url: " + url);
+   				alert("PUT to url: " + url);
 				var httpRequest = new XMLHttpRequest();
 				httpRequest.open("PUT", url, true);
 				httpRequest.addEventListener("readystatechange",handleUpdatedProject,false);
@@ -499,11 +500,17 @@
             function handleUpdatedProject(evt) {
                 //alert(evt.target.readyState);
                 if (evt.target.readyState == 4 ) {
-					if(evt.target.status==204) {
+                    alert("Updating project, " + evt.target.status);
+                    if(evt.target.status==201) {
+                        var location = evt.target.getResponseHeader("Location");
+						var index = location.lastIndexOf("/");
+						var id = location.substring(parseInt(index + 1));
+						sessionStorage.setItem("pid", id);
+						window.location.href = "view_project.html";
+                    }
+					else if(evt.target.status==204) {
 						sessionStorage.setItem("pid", projectObject.id);
 						window.location.href = "view_project.html";
-						//alert("Id for new project: " + id);
-    					//document.getElementById("result").innerHTML = location;
 					}
 				    else {
                         //alert("Unexpected response status " + evt.target.status);
