Major commit: A lot of functionality added and small bugs fixed. Some details: Hyperlink now a ReSTful resource, CRUD possible on single page (view_hyperlinks.html). For estimates, priorities and statuses one can now view all projects for a given value (i.e. for instance all projects with status 'Open'). Export renamed to JsonExporter and export of all resources (estimates, priorities, statuses, hyperlinks and projects)

--- a/selfstudy-rest/src/main/webapp/create_project.html
+++ b/selfstudy-rest/src/main/webapp/create_project.html
@@ -11,9 +11,9 @@
 
     </style>
     <script>
-            window.addEventListener("load", initialize, false);
+            window.addEventListener("load", initialise, false);
 
-			function initialize(evt) {
+			function initialise(evt) {
 			    fetchEstimates();
 			    fetchPriorities();
 			    fetchStatuses();
