--- a/selfstudy-rest/src/main/webapp/index.html
+++ b/selfstudy-rest/src/main/webapp/index.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Self study</title>
+        <link rel="stylesheet" type="text/css" href="style/project.css">
     </head>
     <body>
+        <section>
         <h1>Self study</h1>
         <p>This is the home page. Please enjoy!</p>
         <p><a href="view_estimates.html">View estimates</a></p>
-        <p><a href="view_estimate.html">View estimate</a></p>
         <p><a href="view_priorities.html">View priorities</a></p>
-        <p><a href="view_priority.html">View priority</a></p>
         <p><a href="view_statuses.html">View statuses</a></p>
-        <p><a href="view_status.html">View status</a></p>
+        <p><a href="view_hyperlinks.html">View hyperlinks</a></p>
         <p><a href="view_projects.html">View projects</a></p>
+        </section>
     </body>
 </html>
