--- a/selfstudy-rest/src/main/webapp/view_projects.html
+++ b/selfstudy-rest/src/main/webapp/view_projects.html
@@ -13,9 +13,9 @@
     <script>
             var projectArray;
 
-			window.addEventListener("load", initialize, false);
+			window.addEventListener("load", initialise, false);
 
-			function initialize(evt) {
+			function initialise(evt) {
                 fetchProjects();
 			    document.getElementById("create").addEventListener("click", create, false);
 				document.getElementById("sortById").addEventListener("change", sort, false);
